# cricfield

./: .gitignore  README.md  config.py  cricfield.py  cricfield_design.py  fielders.py  main.py  pyproject.toml
adapters/: cricfield_design.py  fielder_drawer.py  hud_renderer.py  pygame_ui.py  settings_menu.py
core/: fielder_logic.py  interfaces.py
docs/: adapters.rst  conf.py  index.rst  modules.rst
domain/: config.py  constants.py
src/cricfield/: main.py
src/cricfield/adapters/: cricfield_design.py  fielder_drawer.py  hud_renderer.py  pygame_ui.py  settings_menu.py
src/cricfield/core/: fielder_logic.py
