[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricfield"
version = "0.1.0"
description = "Cricket fielding visualizer"
readme = "README.md"
authors = [
  { name="SNK" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "pygame==2.6.1",
  "pygame-menu==4.5.2",  
]

[project.urls]
Homepage = "https://github.com/sangeethankumar/cricfield"

[project.scripts]
cricfield = "cricfield.main:main"
